removed Lucida Grande, Tahoma, and Verdana fonts because they were messing up layout in Favorites dialog in FireFox

--- a/var/www/html/torrentwatch-xa/css/torrentwatch-xa.css
+++ b/var/www/html/torrentwatch-xa/css/torrentwatch-xa.css
@@ -6,7 +6,8 @@ html {
 }
 
 body {
-    font: 85% "lucida grande", Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    /* font: 85% "lucida grande", Tahoma, Verdana, Arial, Helvetica, sans-serif; */
+    font: 85% Arial, Helvetica, sans-serif;
     color: #323232;
     text-align: left;
     overflow: hidden;
